gccida/c3/find_basic_blocks
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1091:4: error: expected ';' after expression
rtx v23; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1091:5: error: use of undeclared identifier 'v23'
rtx v23; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1103:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1103:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1117:15: error: use of undeclared identifier 'TV_CFG_0'; did you mean 'TV_CFG'?
timevar_push( TV_CFG_0); 
              ^~~~~~~~
              TV_CFG
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/timevar.def:43:13: note: 'TV_CFG' declared here
DEFTIMEVAR (TV_CFG                   , "cfg construction")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1196:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v18.rtwint = ( __int64)rtx[1].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1241:1: error: use of undeclared identifier 'v23'
v23 = f; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1274:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v30 = ( _DWORD *)f[2]; 
                 ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1280:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v29.rtwint = ( __int64)f[1].fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1288:27: error: use of undeclared identifier 'v23'; did you mean 'v28'?
if ( control_flow_insn_p( v23) ) 
                          ^~~
                          v28
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1096:18: note: 'v28' declared here
 struct rtx_def *v28; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1333:17: error: use of undeclared identifier 'v23'
v37 = ( __int64)v23[2]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1336:39: error: expected expression
label_refs = find_label_refs( *( rtx *)( v37 + 8), v27); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1337:32: error: expected expression
v39 = find_label_refs( *( rtx *)( *( _QWORD *)&v23[2] + 16LL), label_refs); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1337:48: error: use of undeclared identifier 'v23'; did you mean 'v28'?
v39 = find_label_refs( *( rtx *)( *( _QWORD *)&v23[2] + 16LL), label_refs); 
                                               ^~~
                                               v28
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1096:18: note: 'v28' declared here
 struct rtx_def *v28; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1338:32: error: expected expression
v22 = find_label_refs( *( rtx *)( *( _QWORD *)&v23[2] + 24LL), v39); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1338:48: error: use of undeclared identifier 'v23'; did you mean 'v28'?
v22 = find_label_refs( *( rtx *)( *( _QWORD *)&v23[2] + 24LL), v39); 
                                               ^~~
                                               v28
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1096:18: note: 'v28' declared here
 struct rtx_def *v28; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1339:44: error: use of undeclared identifier 'v23'; did you mean 'v28'?
v40 = *(  struct rtx_def **)( *( _QWORD *)&v23[2] + 32LL); 
                                           ^~~
                                           v28
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1096:18: note: 'v28' declared here
 struct rtx_def *v28; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1349:6: error: use of undeclared identifier 'v23'; did you mean 'v28'?
if ( v23[2].fld[0].rtint == -80 ) 
     ^~~
     v28
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1096:18: note: 'v28' declared here
 struct rtx_def *v28; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1352:18: error: use of undeclared identifier 'v23'; did you mean 'v28'?
f = delete_insn( v23); 
                 ^~~
                 v28
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/cfgbuild.c:1096:18: note: 'v28' declared here
 struct rtx_def *v28; // r14 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_basic_blocks/src/obj/cfgbuild.o] Error 1
